--- a/main.scss
+++ b/main.scss
@@ -6,8 +6,8 @@
 $body-font: 13px 'Open Sans', sans-serif;
 $body-color: #333;
 $header-height: 60px;
-$header-secondary: #59899e;
-$header-primary: #93c4d3;
+$header-secondary: #7986CB;
+$header-primary: #9FA8DA;
 $center-h: 0 auto;
 $logo: 700 55px 'Quicksand', sans-serif;
 
