fixed display/float issue on logo

--- a/main.css
+++ b/main.css
@@ -59,11 +59,12 @@ a {
 .logo a {
   color: #fff;
   height: 60px;
+  line-height: 60px;
   margin-right: 30px;
   width: 100px;
   font: 700 55px "Quicksand", sans-serif;
 }
 
 .logo {
-  display: block;
+  float: left;
 }
