--- a/main.scss
+++ b/main.scss
@@ -6,8 +6,8 @@
 $body-font: 13px 'Open Sans', sans-serif;
 $body-color: #333;
 $header-height: 60px;
-$header-secondary: #EF5350;
-$header-primary: #FF5252;
+$header-secondary: #00897b;
+$header-primary: #26a69a;
 $center-h: 0 auto;
 $logo: 700 45px 'Quicksand', sans-serif;
 
