--- a/main.css
+++ b/main.css
@@ -21,8 +21,8 @@ a {
   line-height: 60px;
   height: 60px;
   font-weight: 400;
-  box-shadow: 0px 1px 3px 0px #EF5350;
-  background: #FF5252;
+  box-shadow: 0px 1px 3px 0px #00897b;
+  background: #26a69a;
   left: 0;
   right: 0;
   top: 0;
