--- a/main.scss
+++ b/main.scss
@@ -10,6 +10,7 @@ $header-secondary: #00897b;
 $header-primary: #26a69a;
 $center-h: 0 auto;
 $logo: 700 45px 'Quicksand', sans-serif;
+$gray: #bbb;
 
 
 * {box-sizing: border-box}
@@ -77,4 +78,17 @@ a {
 
 .logo {
   float: left;
+}
+
+#footer {
+  border-top: 1px solid $gray;
+  margin-bottom: -1px;
+  position: relative;
+}
+
+#footer .wrap {
+  margin: $center-h;
+  padding-bottom: 30px;
+  line-height: 1.4;
+  text-align: center;
 }
