--- a/main.css
+++ b/main.css
@@ -68,3 +68,16 @@ a {
 .logo {
   float: left;
 }
+
+#footer {
+  border-top: 1px solid #bbb;
+  margin-bottom: -1px;
+  position: relative;
+}
+
+#footer .wrap {
+  margin: 0 auto;
+  padding-bottom: 30px;
+  line-height: 1.4;
+  text-align: center;
+}
