--- a/main.scss
+++ b/main.scss
@@ -32,7 +32,7 @@ a {
   line-height: $header-height;
   height: $header-height;
   font-weight: 400;
-  box-shadow: 0px 1px 3px 0px $header-secondary;
+  box-shadow: 0 1px 3px 0 $header-secondary;
   background: $header-primary;
   left: 0;
   right: 0;
@@ -82,13 +82,18 @@ a {
 
 #footer {
   border-top: 1px solid $gray;
-  margin-bottom: -1px;
-  position: relative;
+  position: absolute;
+  min-height: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 720px;
+  margin: 0 auto -1px;
 }
 
 #footer .wrap {
-  margin: $center-h;
-  padding-bottom: 30px;
+  margin: 30px auto;
   line-height: 1.4;
   text-align: center;
+  position: relative;
 }
