--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ a {
   line-height: 60px;
   height: 60px;
   font-weight: 400;
-  box-shadow: 0px 1px 3px 0px #00897b;
+  box-shadow: 0 1px 3px 0 #00897b;
   background: #26a69a;
   left: 0;
   right: 0;
@@ -71,13 +71,18 @@ a {
 
 #footer {
   border-top: 1px solid #bbb;
-  margin-bottom: -1px;
-  position: relative;
+  position: absolute;
+  min-height: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 720px;
+  margin: 0 auto -1px;
 }
 
 #footer .wrap {
-  margin: 0 auto;
-  padding-bottom: 30px;
+  margin: 30px auto;
   line-height: 1.4;
   text-align: center;
+  position: relative;
 }
