--- a/main.css
+++ b/main.css
@@ -86,3 +86,17 @@ a {
   text-align: center;
   position: relative;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  background: #eee;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 0;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  background: #999;
+}
