--- a/main.scss
+++ b/main.scss
@@ -6,8 +6,8 @@
 $body-font: 13px 'Open Sans', sans-serif;
 $body-color: #333;
 $header-height: 60px;
-$header-secondary: #00897b;
-$header-primary: #26a69a;
+$header-secondary: #26A69A;
+$header-primary: #4DB6AC;
 $header-hover: #80CBC4;
 $center-h: 0 auto;
 $logo: 700 45px 'Quicksand', sans-serif;
