--- a/main.css
+++ b/main.css
@@ -21,8 +21,8 @@ a {
   line-height: 60px;
   height: 60px;
   font-weight: 400;
-  box-shadow: 0 1px 3px 0 #00897b;
-  background: #26a69a;
+  box-shadow: 0 1px 3px 0 #26a69a;
+  background: #4DB6AC;
   left: 0;
   right: 0;
   top: 0;
