--- a/main.scss
+++ b/main.scss
@@ -6,7 +6,7 @@
 $body-font: 13px 'Open Sans', sans-serif;
 $body-color: #333;
 $header-height: 60px;
-$header-secondary: #26A69A;
+$header-secondary: #009688;
 $header-primary: #4DB6AC;
 $header-hover: #80CBC4;
 $center-h: 0 auto;
