--- a/main.scss
+++ b/main.scss
@@ -6,9 +6,9 @@
 $body-font: 13px 'Open Sans', sans-serif;
 $body-color: #333;
 $header-height: 60px;
-$header-secondary: #009688;
-$header-primary: #4DB6AC;
-$header-hover: #80CBC4;
+$header-secondary: #212121;
+$header-primary: #303030;
+$header-hover: #424242;
 $center-h: 0 auto;
 $logo: 700 45px 'Quicksand', sans-serif;
 $gray: #bbb;
