--- a/main.css
+++ b/main.css
@@ -21,8 +21,8 @@ a {
   line-height: 60px;
   height: 60px;
   font-weight: 400;
-  box-shadow: 0 1px 3px 0 #009688;
-  background: #4DB6AC;
+  box-shadow: 0 1px 3px 0 #212121;
+  background: #303030;
   left: 0;
   right: 0;
   top: 0;
@@ -57,7 +57,7 @@ a {
 }
 
 .menu li a:hover {
-  background: #80CBC4;
+  background: #424242;
 }
 
 .logo a {
