--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ a {
   line-height: 60px;
   margin-right: 30px;
   width: 100px;
-  font: 700 45px "Quicksand", sans-serif;
+  font: 700 45px "Monoton", cursive;
 }
 
 .logo {
