--- a/main.scss
+++ b/main.scss
@@ -10,7 +10,7 @@ $header-secondary: #212121;
 $header-primary: #303030;
 $header-hover: #424242;
 $center-h: 0 auto;
-$logo: 700 45px 'Monoton', cursive;
+$logo: 45px 'Monoton', cursive;
 $gray: #bbb;
 $scrollbar: #999;
 
