--- a/main.scss
+++ b/main.scss
@@ -5,10 +5,11 @@
 
 $body-font: 13px 'Open Sans', sans-serif;
 $body-color: #333;
+$body-bg: #111;
 $header-height: 60px;
-$header-secondary: #212121;
-$header-primary: #303030;
-$header-hover: #424242;
+$header-secondary: #222;
+$header-primary: #333;
+$header-hover: #444;
 $center-h: 0 auto;
 $logo: 40px 'Monoton', cursive;
 $gray: #bbb;
