--- a/main.scss
+++ b/main.scss
@@ -4,7 +4,7 @@
 // ----
 
 $body-font: 13px 'Open Sans', sans-serif;
-$body-color: #333;
+$body-color: #fff;
 $body-bg: #111;
 $header-height: 60px;
 $header-secondary: #222;
@@ -15,6 +15,8 @@ $logo: 40px 'Monoton', cursive;
 $gray: #bbb;
 $scrollbar: #999;
 $active-link: #FFEB3B;
+$h1: 700 35px 'Open Sans', sans-serif;
+$h2: 600 25px 'Open Sans', sans-serif;
 
 
 * {box-sizing: border-box}
@@ -93,24 +95,6 @@ a {
   float: left;
 }
 
-#footer {
-  border-top: 1px solid $gray;
-  position: absolute;
-  min-height: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 720px;
-  margin: 0 auto -1px;
-}
-
-#footer .wrap {
-  margin: 30px auto;
-  line-height: 1.4;
-  text-align: center;
-  position: relative;
-}
-
 ::-webkit-scrollbar {
   width: 10px;
   background: #eee;
@@ -123,4 +107,62 @@ a {
 ::-webkit-scrollbar-thumb {
     border-radius: 0;
     background: $scrollbar;
+}
+
+/*body*/
+#body-wrap {
+	max-width: 1200px;
+	margin: $center-h;
+	position: relative;
+	padding: 0 20px;
+	background: red;
+	margin-top: $header-height;
+}
+
+.wide-left {
+	padding: 0 20px 100px 0;
+	width: calc(100% / 1.5);
+	float: left;
+	background: red;
+}
+
+.wide-left h1 {
+	text-align: center;
+	padding: 1em 0;
+}
+
+h1 {
+	line-height: 1.1;
+	font: $h1;
+	margin-bottom: 10px;
+}
+
+.container {
+	padding: 20px;
+	position: relative;
+	background: $header-primary;
+	margin: 0 0 20px 0;
+	overflow: hidden;
+}
+
+h2 {
+	font: $h2;
+	line-height: 1.2;
+	margin-bottom: 10px;
+}
+
+.container h2 {
+	border-bottom: 3px solid rgba(255,255,255,0.1);
+	padding-bottom: 10px;
+	position: relative;
+}
+
+.container p {
+	color: #999;
+	margin-bottom: 15px;
+}
+
+
+.contact {
+	height: 375px;
 }
