--- a/main.css
+++ b/main.css
@@ -1,153 +1,97 @@
+/*basics*/
 * {
-  box-sizing: border-box;
+  max-width: 100vw
 }
 
-body,
-html {
+html, body {
   height: 100%;
 }
 
 body {
-  line-height: 20px;
-  font: 13px "Open Sans", sans-serif;
-  color: #fff;
-  background: #111;
+  background: #fff;
+  font-family: "Roboto", sans-serif;
 }
 
 a {
-  background: transparent;
   text-decoration: none;
+  color: inherit;
 }
 
-#header {
-  line-height: 60px;
-  height: 60px;
-  font-weight: 400;
-  box-shadow: 0 1px 3px 0 #222;
-  background: #333;
+/*borders*/
+
+#top, #bottom, #left, #right {
+  position: fixed;
+  background: #F79D84;
+  z-index: 1000;
+}
+
+#top, #bottom {
+  height: 10px;
   left: 0;
   right: 0;
+}
+
+#top {
   top: 0;
-  z-index: 1000;
-  position: fixed;
-  text-transform: uppercase;
 }
 
-#header .wrap {
-  position: relative;
-  width: 970px;
-  margin: 0 auto;
+#bottom {
+  bottom: 0;
 }
 
-.menu {
-  float: left;
-  line-height: 60px;
-  font-size: 13px;
-  list-style: none;
-}
-
-.menu li {
-  display: inline-block;
-}
-
-.menu li a {
-  padding: 0 20px;
-  display: block;
-  letter-spacing: 1px;
-  text-decoration: none;
-  color: #fff;
-}
-
-.menu li a:hover {
-  background: #444;
-}
-
-.menu li a.active {
-  color: #FFEB3B;
-}
-
-.logo a {
-  color: #fff;
-  height: 60px;
-  line-height: 60px;
-  margin-right: 30px;
-  width: 100px;
-  font: 40px "Monoton", cursive;
-}
-
-.logo {
-  float: left;
-}
-
-::-webkit-scrollbar {
+#left, #right {
   width: 10px;
-  background: #eee;
+  top: 0;
+  bottom: 0;
 }
 
-::-webkit-scrollbar-track {
-  border-radius: 0;
+#left {
+  left: 0;
 }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 0;
-  background: #999;
+#right {
+  right: 0;
 }
 
+/*page*/
 
-/*body*/
-
-#body-wrap {
-  max-width: 1200px;
+#page {
+  width: 1280px;
+  height: 100%;
+  background: pink;
   margin: 0 auto;
+  padding: 10px 0;
+  box-sizing: border-box;
+}
+
+/*header*/
+
+.header {
+  padding: 25px 0;
+  background: lemonchiffon;
   position: relative;
-  padding: 0 20px;
-  background: red;
-  margin-top: 60px;
-}
-
-.wide-left {
-  padding: 0 20px 100px 0;
-  width: calc(100% / 1.5);
-  float: left;
-  background: red;
-}
-
-.wide-left h1 {
   text-align: center;
-  padding: 1em 0;
 }
 
 h1 {
-  line-height: 1.1;
-  font: 700 35px 'Open Sans', sans-serif;
-  margin-bottom: 45px;
+  background: aqua;
+  height: 100px;
+  font: 100px "Barrio", cursive;
 }
 
-.container {
-  padding: 20px;
-  position: relative;
-  background: #333;
-  margin: 0 0 20px 0;
-  overflow: hidden;
+.menu {
+  list-style: none;
+  height: 50px;
+  background: orange;
 }
 
-h2 {
-  font: 600 25px 'Open Sans', sans-serif;
-  line-height: 1.2;
-  margin-bottom: 10px;
+.menu li {
+  float: left;
+  line-height: 50px;
+  width: calc(100% / 5);
 }
 
-.container h2 {
-  border-bottom: 3px solid rgba(255, 255, 255, 0.1);
-  padding-bottom: 10px;
-  position: relative;
-}
-
-.container p {
-  color: #999;
-	margin-bottom: 15px;
-}
-
-.contact {
-	height: 375px;
+.menu li a {
+  font-weight: 700;
+  text-transform: uppercase;
 }
