--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 /*basics*/
 * {
-  max-width: 100vw
+  max-width: 100vw;
 }
 
 html, body {
@@ -18,7 +18,6 @@ a {
 }
 
 /*borders*/
-
 #top, #bottom, #left, #right {
   position: fixed;
   background: #F79D84;
@@ -54,44 +53,62 @@ a {
 }
 
 /*page*/
-
 #page {
   width: 1280px;
   height: 100%;
-  background: pink;
   margin: 0 auto;
   padding: 10px 0;
   box-sizing: border-box;
 }
 
 /*header*/
-
 .header {
   padding: 25px 0;
-  background: lemonchiffon;
   position: relative;
   text-align: center;
 }
 
 h1 {
-  background: aqua;
   height: 100px;
   font: 100px "Barrio", cursive;
+  margin: 25px 0;
 }
 
 .menu {
   list-style: none;
   height: 50px;
-  background: orange;
 }
-
 .menu li {
   float: left;
-  line-height: 50px;
   width: calc(100% / 5);
 }
-
 .menu li a {
   font-weight: 700;
   text-transform: uppercase;
+  line-height: 50px;
+  transition: font-size 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+}
+
+li a:hover {
+  font-size: 20px;
+}
+
+.home:hover {
+  color: #EE6352;
+}
+
+.work:hover {
+  color: #59CD90;
+}
+
+.about:hover {
+  color: #3FA7D6;
+}
+
+.contact:hover {
+  color: #FAC05E;
+}
+
+.social:hover {
+  color: #E08DAC;
 }
