--- a/main.scss
+++ b/main.scss
@@ -7,3 +7,91 @@ $work: #59CD90;
 $about: #3FA7D6;
 $contact: #FAC05E;
 $social: #E08DAC;
+
+/*basics*/
+* {max-width: 100vw}
+html,body {height: 100%}
+
+body {
+  background: #fff;
+  font-family: $body-font;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/*borders*/
+
+#top, #bottom, #left, #right {
+  position: fixed;
+  background: $border;
+  z-index: 1000;
+}
+
+#top, #bottom {
+  height: $border-size;
+  left: 0;
+  right: 0;
+}
+
+#top {top: 0}
+#bottom {bottom: 0}
+
+#left, #right {
+  width: $border-size;
+  top: 0;
+  bottom: 0;
+}
+
+#left {left: 0}
+#right {right: 0}
+
+/*page*/
+
+#page {
+  width: 1280px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 10px 0;
+  box-sizing: border-box;
+}
+
+/*header*/
+
+.header {
+  padding: 25px 0;
+  position: relative;
+  text-align: center;
+}
+
+h1 {
+  height: 100px;
+  font: $name;
+  margin: 25px 0;
+}
+
+.menu {
+  list-style: none;
+  height: 50px;
+
+  li {
+    float: left;
+    width: calc(100% / 5);
+
+    a {
+      font-weight: 700;
+      text-transform: uppercase;
+      line-height: 50px;
+      transition: font-size 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    }
+  }
+}
+
+li a:hover {font-size: 20px}
+.home:hover {color:$home}
+.work:hover {color:$work}
+.about:hover {color:$about}
+.contact:hover {color:$contact}
+.social:hover {color:$social}
