--- a/main.scss
+++ b/main.scss
@@ -7,6 +7,8 @@ $work: #59CD90;
 $about: #3FA7D6;
 $contact: #FAC05E;
 $social: #E08DAC;
+$box-w: 300px;
+$box-h: 250px;
 
 /*basics*/
 * {max-width: 100vw}
@@ -95,3 +97,55 @@ li a:hover {font-size: 20px}
 .about:hover {color:$about}
 .contact:hover {color:$contact}
 .social:hover {color:$social}
+
+/*content*/
+
+.content {
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.box {
+  width: $box-w;
+  height: $box-h;
+  background: #eee;
+  float: left;
+  margin: 0 10px 20px;
+  box-sizing: border-box;
+  transition: 0.3s;
+  border: 5px solid #000;
+  box-shadow: 2.5px 2.5px black;
+  position: relative;
+  -webkit-backface-visibility: hidden;
+}
+
+.box:nth-child(5n+1) {border-color:$home}
+.box:nth-child(5n+2) {border-color:$work}
+.box:nth-child(5n+3) {border-color:$about}
+.box:nth-child(5n+4) {border-color:$contact}
+.box:nth-child(5n+5) {border-color:$social}
+
+.box img {height:100%;width:100%}
+
+.desc {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font: 700 16px 'Roboto Condensed', sans-serif;
+  text-transform: uppercase;
+  background: rgba(0,0,0,0.5);
+  width: 100%;
+  text-align: center;
+  line-height: 42px;
+  opacity: 0;
+  transition: transform 0.3s, opacity 0.3s, color 0.2s;
+  height: 42px;
+}
+
+.box:hover .desc {
+  opacity: 1;
+  transform: translate(0, 198px);
+}
+
+.desc:hover {color:#fff}
