--- a/main.css
+++ b/main.css
@@ -112,3 +112,74 @@ li a:hover {
 .social:hover {
   color: #E08DAC;
 }
+
+/*content*/
+
+.content {
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.box {
+  width: 300px;
+  height: 250px;
+  background: #eee;
+  float: left;
+  margin: 0 10px 20px;
+  box-sizing: border-box;
+  transition: 0.3s;
+  border: 5px solid #000;
+  box-shadow: 2.5px 2.5px black;
+  position: relative;
+  -webkit-backface-visibility: hidden;
+}
+
+.box:nth-child(5n+1) {
+  border-color: #EE6352;
+}
+
+.box:nth-child(5n+2) {
+  border-color: #59CD90;
+}
+
+.box:nth-child(5n+3) {
+  border-color: #3FA7D6;
+}
+
+.box:nth-child(5n+4) {
+  border-color: #FAC05E;
+}
+
+.box:nth-child(5n+5) {
+  border-color: #E08DAC;
+}
+
+.box img {
+  height: 100%;
+  width: 100%;
+}
+
+.desc {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font: 700 16px 'Roboto Condensed', sans-serif;
+  text-transform: uppercase;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  text-align: center;
+  line-height: 42px;
+  opacity: 0;
+  transition: transform 0.3s, opacity 0.3s, color 0.2s;
+  height: 42px;
+}
+
+.box:hover .desc {
+  opacity: 1;
+  transform: translate(0, 198px);
+}
+
+.desc:hover {
+  color: #fff;
+}
